# AURPG

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Full Stack Prototyping Concept Proposal_ The Amalgamated Ultimate RPG System.md  README.md  pyproject.toml
.github/: AURPG.agent.md
.github/workflows/: ci.yml  eval.yml
docs/: DESIGN.md  PLAYER_GUIDE.md  PLAYER_TESTING.md  PROMPT_USAGE_GUIDE.md  ROADMAP.md
docs/specs/: 2026-06-09-flutter-gui-design.md
gui/: README.md  pubspec.yaml
gui/lib/: main.dart
gui/lib/api/: client.dart  models.dart
gui/lib/api/endpoints/: health.dart  sessions.dart  settings.dart  turns.dart
gui/lib/providers/: server_provider.dart  settings_provider.dart
gui/lib/screens/: home_screen.dart  settings_screen.dart  startup_screen.dart
gui/lib/theme/: app_theme.dart
gui/linux/: CMakeLists.txt
gui/linux/runner/: my_application.cc
gui/macos/Runner.xcodeproj/: project.pbxproj
gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gui/macos/Runner/Configs/: AppInfo.xcconfig
gui/test/: widget_test.dart
gui/windows/: CMakeLists.txt
gui/windows/runner/: Runner.rc  main.cpp
src/aurpg/: __init__.py  dice.py  llm.py  parser.py  safety.py  session.py  state.py  validator.py  wizard.py
src/aurpg/cli/: __init__.py  game_loop.py  main.py  renderer.py
src/aurpg/prompts/: aurpg_system_prompt_prototype.xml
src/aurpg/prompts/examples/: sample_campaign_state.xml
src/aurpg/server/: __init__.py  __main__.py  _settings.py  _store.py  _utils.py  app.py  schemas.py
src/aurpg/server/routes/: health.py  sessions.py  settings.py  turns.py
src/aurpg/state/: __init__.py  ledger_parser.py  manager.py
tests/: test_dice.py  test_llm.py  test_parser.py  test_roundtrip.py  test_safety.py  test_session.py  test_state.py  test_state_manager.py  test_validator.py  test_wizard.py
tests/cli/: test_cli.py  test_game_loop.py  test_renderer.py
tests/integration/: test_session_lifecycle.py
tests/prompts/: conftest.py  test_golden_transcripts.py
tests/prompts/fixtures/: aftercare_debrief.yaml  baseline_risky_action.yaml  clock_advancement.yaml  flashback.yaml  momentum_burn.yaml  progress_move.yaml  safety_interrupt.yaml  solo_critical.yaml  solo_miss.yaml  solo_strong_hit.yaml  squad_critical.yaml  squad_resolution.yaml  x_card_cycle.yaml  x_card_interrupt.yaml
tests/server/: conftest.py  test_health.py  test_sessions.py  test_settings.py  test_turns.py
