[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurpg"
version = "0.1.0.dev0"
description = "Amalgamated Ultimate RPG System — LLM-powered text RPG engine"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "lxml>=4.9",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
