[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurpg"
version = "0.1.0.dev0"
description = "Amalgamated Ultimate RPG System — prompt-as-engine text RPG framework"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.30",
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
aurpg = "aurpg.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aurpg = ["prompts/*.xml", "prompts/examples/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that call the real LLM API (skip with -m 'not live')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
