[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurpg"
version = "0.1.0.dev0"
description = "Amalgamated Ultimate RPG System — prompt-as-engine text RPG framework"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.30",
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "httpx>=0.27",
]

[project.scripts]
aurpg = "aurpg.cli.main:main"
aurpg-server = "aurpg.server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aurpg = ["prompts/*.xml", "prompts/examples/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that call the real LLM API (skip with -m 'not live')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
